ssl certificate FilenotFound erro

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <p><strong>How It Works</strong><br />
         It Checks for an index.html file in the current working directory and serves it else it lists the files in the directory. 
         The servers port is configurable through the terminal.</p>
+        <h2>Replace this index.html with your own </h2>
       <p>&nbsp;</p>
 </body>
 </html>
